--- a/assets/style.css
+++ b/assets/style.css
@@ -56,10 +56,18 @@ nav a:hover {
   }
 
 main {
-     display: inline-block;
+     display: flex;
+     flex-wrap: wrap;
+     flex-grow: 1;
 }
 
-header nav ul li {
+aside {
+    flex: 1;
+    padding: 1%;
+    text-align: left;
+}
+
+nav ul li {
     display: inline-block;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -95,17 +103,25 @@ footer {
 .aboutMe {
     display: flex;
     align-items: flex-start;
-    width: 90%;
+    text-align: left;
+    width: 60%;
     margin: 1% auto;
+    margin-top: 5%;
 }
 
 .myDetails {
-    margin-left: 3%;
-    flex: 0 0 60%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-right: 15%;
 }
 
 .photoEren {
     width: 50%;
+}
+
+.myPhoto {
+    flex: 1;
 }
 
 #pic {
@@ -136,8 +152,12 @@ footer {
 }
 
 @media screen and (max-width: 790px) {
-    nav{
+    nav ul {
         flex-direction: column;
+        
+    }
+    li {
+        flex-basis: 100%;
     }
 
 }
@@ -153,11 +173,13 @@ table {
 
 th {
     color: rgb(180, 150, 110);
+    text-align: center;
+    column-gap: 3px;
 }
 
 .contInfo h2 {
     text-align: center;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
 }
 
 .work h2 {
@@ -168,4 +190,8 @@ th {
 .myDetails h2 {
     text-align: center;
     padding-bottom: 5%;
+}
+
+.workTab {
+    width: 100%;
 }
