--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: blanchedalmond;
+    background-color: white;
     font-size: 20px;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@ body {
 header {
     text-align: center;
     padding: 40px;
-    background-color: rgb(180, 150, 110);
+    background-color: #417787;;
     color: white;
 }
 
@@ -39,15 +39,15 @@ header p {
 nav {
     display: flex;
     justify-content: flex-end;
-    background-color: rgb(73, 71, 71);
+    background-color: #dccfc1;
     font-size: 1.5rem;
-    color: beige;
+    color: #b5c4c5;
 }
 
 nav a {
     padding: 14px 20px;
     text-align: center;
-    color: beige;
+    color: #002f53;
 }
 
 nav a:hover {
@@ -82,7 +82,7 @@ footer {
 }
 
 .workSample {
-    flex: 1;
+    flex: none;
     padding: 50px;
     display: inline-block;
     flex-wrap: wrap;
@@ -124,11 +124,7 @@ footer {
     flex: 1;
 }
 
-#pic {
-    width: 50%;
-}
-
-.sampleone {
+.sampleone, .sampletwo, .samplefour {
     width: 100%;
 }
 
@@ -142,9 +138,9 @@ footer {
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
-  font-size:30px;
+    font-size:30px;
 	box-shadow: 2px 2px 3px #999;
-  z-index:100;
+    z-index:100;
 }
 
 .floatButton {
@@ -184,6 +180,7 @@ th {
 
 .work h2 {
     text-align: center;
+    align-items: center;
     padding-bottom: 5%;
 }
 
